cloth textures + mesh

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -269,14 +269,14 @@ FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
-ContentBrowserTab1.ThumbnailSizeScale=0.180000
+ContentBrowserTab1.ThumbnailSizeScale=0.130000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -3178,7 +3178,7 @@ InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.DestructibleComponent.FractureEffects\" \"Object.DestructibleComponent.FractureEffects.FractureEffects[0]\" \"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
+Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
 PrimitiveComponent="\"Object.DestructibleComponent.FractureEffects\" \"Object.DestructibleComponent.FractureEffects.FractureEffects[0]\" \"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
@@ -4109,6 +4109,7 @@ LastLogListing=MapCheck
 /Game/Models/Armour/LeatherCowlHelmet=(R=0.000000,G=0.500000,B=0.079121,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/Hanging_Cloth_Unwrapped_Chris_12-06-2019.Hanging_Cloth_Unwrapped_Chris_12-06-2019;
 RecentlyPlaced=/Game/Will/Destrucible_Barrel.Destrucible_Barrel;
 RecentlyPlaced=/Game/Foliage/Crystals/Blue-purpleCrystal.Blue-purpleCrystal;
 RecentlyPlaced=/Game/Lighting/GlobalLighting.GlobalLighting;
@@ -4128,7 +4129,6 @@ RecentlyPlaced=/Game/AIAgent/DerivedClasses/HybridAI.HybridAI;
 RecentlyPlaced=/Game/Models/finishedassets/weapontack/WR_Un.WR_Un;
 RecentlyPlaced=/Game/Models/weapons/LP_dagger.LP_dagger;
 RecentlyPlaced=/Game/Models/finishedassets/oven/Oven_Unwrapped__1_.Oven_Unwrapped__1_;
-RecentlyPlaced=/Game/Models/Ben/half_vase_Ben_Wilkinson_09-01-19.half_vase_Ben_Wilkinson_09-01-19;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -4181,14 +4181,14 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Foliage/Crystals/Blue-purpleCrystal
-MRUItem1=/Game/Models/Jack/Crystal_realistic_1
-MRUItem2=/Game/Models/finishedassets/tree/Material_005
-MRUItem3=/Game/Widgets/Ability_Wheel
-MRUItem4=/Game/DarkBrown
-MRUItem5=/Game/Will/Destrucible_Barrel
-MRUItem6=/Game/Models/finishedassets/barrel/LP_barrel_DM
-MRUItem7=/Game/Levels/Area1-Rework
+MRUItem0=/Game/Levels/Area1-Rework
+MRUItem1=/Game/Foliage/Crystals/Blue-purpleCrystal
+MRUItem2=/Game/Models/Jack/Crystal_realistic_1
+MRUItem3=/Game/Models/finishedassets/tree/Material_005
+MRUItem4=/Game/Widgets/Ability_Wheel
+MRUItem5=/Game/DarkBrown
+MRUItem6=/Game/Will/Destrucible_Barrel
+MRUItem7=/Game/Models/finishedassets/barrel/LP_barrel_DM
 MRUItem8=/Game/TopDownBP/Blueprints/TopDownCharacter
 MRUItem9=/Game/Josh/AnimationsTest/Heavy_Slam_Montage
 MRUItem10=/Game/Josh/AnimationsTest/Heavy_Slam
