Revert "merge textures ui"

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -209,7 +209,7 @@ PlayerController=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultVa
 Ability_Wheel_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 RangeFinder_C=
 Button=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-HUD_Proto_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+HUD_Proto_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 PlayerControl_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 CoolDownComponent_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 RangedAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
@@ -255,7 +255,6 @@ BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 HumanAnimBP_C=
 Destrucible_Barrel_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 Spawn Item=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
-GetFillColorAndOpacity_0=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -280,7 +279,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/Widgets
+ContentBrowserTab1.SelectedPaths=/Game/b024899h
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -301,26 +300,9 @@ SequenceBrowser.HiddenColumns=ParentAsset
 SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
-ContentBrowserTab2.SourcesExpanded=False
-ContentBrowserTab2.Locked=False
-ContentBrowserTab2.VerticalSplitter.SlotSize0=0.250000
-ContentBrowserTab2.VerticalSplitter.SlotSize1=0.750000
-ContentBrowserTab2.HorizontalSplitter.SlotSize0=0.900000
-ContentBrowserTab2.HorizontalSplitter.SlotSize1=0.900000
-ContentBrowserTab2.ActiveTypeFilters=
-ContentBrowserTab2.EnabledTypeFilters=
-ContentBrowserTab2.ActiveFrontendFilters=
-ContentBrowserTab2.EnabledFrontendFilters=
-ContentBrowserTab2.SelectedPaths=/Game/Widgets
-ContentBrowserTab2.Favorites.SelectedPaths=
-ContentBrowserTab2.CollectionsExpanded=True
-ContentBrowserTab2.SelectedCollections=
-ContentBrowserTab2.ExpandedCollections=
-ContentBrowserTab2.ThumbnailSizeScale=0.180000
-ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/b024899h/ParticleEffectsTest
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -3190,7 +3172,7 @@ InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.MarqueeImage\" \"Object.Appearance.FillColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Mesh\" \"Object.ImportSettings.AssetImportData.Object.Transform\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" \"Object.ImportSettings.AssetImportData.Object.Miscellaneous\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
 PrimitiveComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
@@ -3256,10 +3238,10 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.MarqueeImage\" \"Object.Appearance.FillColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.MarqueeImage\" \"Object.Appearance.FillColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PlayerController=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -3275,7 +3257,7 @@ AIGraphNode=
 EdGraphNode=
 RangeFinder_C=
 RangedController_C="\"Object.Default.DebugColour\" "
-ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.MarqueeImage\" \"Object.Appearance.FillColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ProgressBar="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Pause_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Start_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CoolDownComponent_C="\"Object.\" \"Object.\" "
@@ -3319,7 +3301,6 @@ SkeletalMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DebrisPara
 DestructibleComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
 SkinnedMeshComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
 Spawn Item="\"Struct.BarrelTransform\" "
-GetFillColorAndOpacity_0="\"Struct.HealthBarRef\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3328,7 +3309,6 @@ BoxComponent.Collision=True
 FoliageType_InstancedStaticMesh.Mesh=True
 DestructibleActor.Physics=True
 DestructibleComponent.Physics=True
-K2Node_VariableGet.Variable=True
 
 [RootWindow]
 ScreenPosition=X=67.000 Y=52.000
@@ -4195,26 +4175,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Chloe/UI/HUD_Proto
-MRUItem1=/Game/b024899h/ParticleEffectsTest
-MRUItem2=/Game/Levels/Demo
-MRUItem3=/Game/c024816h/SmallHealthPotion
-MRUItem4=/Game/GW000979/ItemEnum
-MRUItem5=/Game/Will/Destrucible_Barrel
-MRUItem6=/Game/Models/finishedassets/barrel/LP_barrel
-MRUItem7=/Game/Models/finishedassets/barrel/LP_barrel_DM
-MRUItem8=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem9=/Game/Levels/Area1-Rework
-MRUItem10=/Game/Josh/AnimationsTest/Heavy_Slam_Montage
-MRUItem11=/Game/Josh/AnimationsTest/Heavy_Slam
-MRUItem12=/Game/Josh/AnimationsTest/Heavy_Uppercut
-MRUItem13=/Game/Josh/HeavyHumanIdleRun_BS
-MRUItem14=/Game/Josh/HumanIdleRun_BS
-MRUItem15=/Game/Josh/1HShieldHumanIdleRun_BP
-MRUItem16=/Game/Josh/1HHumanIdleRun_BP
-MRUItem17=/Game/Josh/BowHumanIdleRun_BP
-MRUItem18=/Game/Josh/Skinned_Player_Skeleton
-MRUItem19=/Game/Josh/Skinned_Player
+MRUItem0=/Game/b024899h/ParticleEffectsTest
+MRUItem1=/Game/Levels/Demo
+MRUItem2=/Game/c024816h/SmallHealthPotion
+MRUItem3=/Game/GW000979/ItemEnum
+MRUItem4=/Game/Will/Destrucible_Barrel
+MRUItem5=/Game/Models/finishedassets/barrel/LP_barrel
+MRUItem6=/Game/Models/finishedassets/barrel/LP_barrel_DM
+MRUItem7=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem8=/Game/Levels/Area1-Rework
+MRUItem9=/Game/Josh/AnimationsTest/Heavy_Slam_Montage
+MRUItem10=/Game/Josh/AnimationsTest/Heavy_Slam
+MRUItem11=/Game/Josh/AnimationsTest/Heavy_Uppercut
+MRUItem12=/Game/Josh/HeavyHumanIdleRun_BS
+MRUItem13=/Game/Josh/HumanIdleRun_BS
+MRUItem14=/Game/Josh/1HShieldHumanIdleRun_BP
+MRUItem15=/Game/Josh/1HHumanIdleRun_BP
+MRUItem16=/Game/Josh/BowHumanIdleRun_BP
+MRUItem17=/Game/Josh/Skinned_Player_Skeleton
+MRUItem18=/Game/Josh/Skinned_Player
+MRUItem19=/Game/Josh/AnimationsTest/Shield_Sheath
 
 [WidgetTemplatesExpanded]
 Extra=False
