--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -281,7 +281,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest/AttackMontages
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -309,9 +309,6 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 [AssetEditorManager]
 CleanShutdown=True
 None=======
-OpenAssetsAtExit=/Game/Josh/HumanAnimBP.HumanAnimBP
-OpenAssetsAtExit=/Game/Josh/AnimationsTest/AttackMontages/Slash_Montage.Slash_Montage
-OpenAssetsAtExit=/Game/Josh/Skinned_Player_Skeleton.Skinned_Player_Skeleton
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3014,6 +3011,15 @@ AnimGraphNode_SaveCachedPose.CachedPose=True
 AnimGraphNode_LayeredBoneBlend.Config=True
 AnimGraphNode_LayeredBoneBlend.Runtime=True
 AnimGraphNode_LayeredBoneBlend.Performance=True
+REINST_TopDownCharacter_C_163.None=True
+REINST_TopDownCharacter_C_163.Tick=True
+REINST_TopDownCharacter_C_163.Character=True
+REINST_TopDownCharacter_C_163.Camera=True
+REINST_TopDownCharacter_C_163.Pawn=True
+REINST_TopDownCharacter_C_163.Rendering=True
+REINST_TopDownCharacter_C_163.Replication=True
+REINST_TopDownCharacter_C_163.Input=True
+REINST_TopDownCharacter_C_163.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -4093,7 +4099,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LoadErrors
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -4196,26 +4202,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Josh/AnimationsTest/AttackMontages/Slash_Montage
+MRUItem0=/Game/TopDownBP/Blueprints/I_DeathSystem
 MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem2=/Game/Josh/Skinned_Player_Skeleton
-MRUItem3=/Game/Josh/AnimationsTest/AttackMontages/Heavy_Uppercut_Montage
-MRUItem4=/Game/Josh/TestRoom/Running_Anim
-MRUItem5=/Game/Josh/1HHumanIdleRun_BP
-MRUItem6=/Game/Josh/HumanAnimBP
-MRUItem7=/Game/Josh/HoundFolder/HoundAnim_BP
-MRUItem8=/Game/Josh/HoundFolder/HoundIdleRun_BS
-MRUItem9=/Game/b024899h/ParticleEffectsTest
-MRUItem10=/Game/Levels/Demo
-MRUItem11=/Game/c024816h/SmallHealthPotion
-MRUItem12=/Game/GW000979/ItemEnum
-MRUItem13=/Game/Will/Destrucible_Barrel
-MRUItem14=/Game/Models/finishedassets/barrel/LP_barrel
-MRUItem15=/Game/Models/finishedassets/barrel/LP_barrel_DM
-MRUItem16=/Game/Levels/Area1-Rework
-MRUItem17=/Game/Josh/AnimationsTest/Heavy_Slam_Montage
-MRUItem18=/Game/Josh/AnimationsTest/Heavy_Slam
-MRUItem19=/Game/Josh/AnimationsTest/Heavy_Uppercut
+MRUItem2=/Game/Josh/AnimationsTest/AttackMontages/Slash_Montage
+MRUItem3=/Game/Josh/Skinned_Player_Skeleton
+MRUItem4=/Game/Josh/AnimationsTest/AttackMontages/Heavy_Uppercut_Montage
+MRUItem5=/Game/Josh/TestRoom/Running_Anim
+MRUItem6=/Game/Josh/1HHumanIdleRun_BP
+MRUItem7=/Game/Josh/HumanAnimBP
+MRUItem8=/Game/Josh/HoundFolder/HoundAnim_BP
+MRUItem9=/Game/Josh/HoundFolder/HoundIdleRun_BS
+MRUItem10=/Game/b024899h/ParticleEffectsTest
+MRUItem11=/Game/Levels/Demo
+MRUItem12=/Game/c024816h/SmallHealthPotion
+MRUItem13=/Game/GW000979/ItemEnum
+MRUItem14=/Game/Will/Destrucible_Barrel
+MRUItem15=/Game/Models/finishedassets/barrel/LP_barrel
+MRUItem16=/Game/Models/finishedassets/barrel/LP_barrel_DM
+MRUItem17=/Game/Levels/Area1-Rework
+MRUItem18=/Game/Josh/AnimationsTest/Heavy_Slam_Montage
+MRUItem19=/Game/Josh/AnimationsTest/Heavy_Slam
 
 [WidgetTemplatesExpanded]
 Extra=False
