--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,17 +105,18 @@ CurrentPosGridSize=4
 CurrentRotGridMode=GridMode_DivisionsOf360
 
 [MRU]
-MRUItem0=/Game/Levels/Area1-Rework
+MRUItem0=/Game/Levels/Demo
 MRUItem1=/Game/Levels/MainMenu
-MRUItem2=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem3=/Game/b024899h/ParticleEffectsTest
-MRUItem4=/Game/Levels/Demo
-MRUItem5=/Game/Levels/Area2-Market
-MRUItem6=/Game/Levels/texturedzoo
-MRUItem7=/Game/Levels/MechanicsLevel
-MRUItem8=/Game/Chloe/UI/Main_Menu_level/Main_Menu
-MRUItem9=/Game/Levels/TerrainMap
-MRUItem10=/Game/Levels/BlockOut
+MRUItem2=/Game/Levels/Area2-MarketMeshStart
+MRUItem3=/Game/Levels/Area1-Rework
+MRUItem4=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem5=/Game/b024899h/ParticleEffectsTest
+MRUItem6=/Game/Levels/Area2-Market
+MRUItem7=/Game/Levels/texturedzoo
+MRUItem8=/Game/Levels/MechanicsLevel
+MRUItem9=/Game/Chloe/UI/Main_Menu_level/Main_Menu
+MRUItem10=/Game/Levels/TerrainMap
+MRUItem11=/Game/Levels/BlockOut
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Pause,MoviePlayerSettings.Movies.StartupMovies,
@@ -176,17 +177,17 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Pause,MoviePlayerSettings.Movies.StartupMovies,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Pause,MoviePlayerSettings.Movies.StartupMovies,
 SphereComponent=SphereComponent.Collision.Collision,
-TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.Lightmass.Lightmaps,
-ObjectProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+ObjectProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 Perception_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 BoolProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
-ArrayProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+ArrayProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 IntProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 BaseWeapon_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
@@ -279,7 +280,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -302,7 +303,7 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Levels/Demo
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -3047,13 +3048,31 @@ SkyLight.Tags=True
 SkyLight.Cooking=True
 SkyLight.Actor=True
 WorldSettings.Cooking=True
+BossAI_C.Tick=True
+BossAI_C.Default=True
+BossAI_C.Stats=True
+BossAI_C.Status=True
+BossAI_C.Bleed=True
+BossAI_C.Stun=True
+BossAI_C.Crystalise=True
+BossAI_C.Blind=True
+BossAI_C.Poison=True
+BossAI_C.LifeSteal=True
+BossAI_C.Drop=True
+BossAI_C.Character=True
+BossAI_C.Camera=True
+BossAI_C.Pawn=True
+BossAI_C.Rendering=True
+BossAI_C.Replication=True
+BossAI_C.Input=True
+BossAI_C.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
 /Game/AIAgent/TargetInterface.TargetInterface=0
 /Game/AIAgent/ProtoAI.ProtoAI=0
 /Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton=0
-/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter=0
+/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter=1
 /Game/Materials/BlueGreen.BlueGreen=0
 /Game/Materials/YellowGreen.YellowGreen=0
 /Game/Materials/YellowOrange.YellowOrange=0
@@ -3138,7 +3157,7 @@ WorldSettings.Cooking=True
 /Game/CombatInterface/I_Combat.I_Combat=0
 /Game/Models/weapons/crystal_sword.crystal_sword=0
 /Game/Models/Ben/gate.gate=0
-/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=0
 /Game/T019847G/Leveling/I_AbilityComponent.I_AbilityComponent=0
 /Game/TopDownBP/Blueprints/I_PlayerStatus.I_PlayerStatus=0
 /Game/T019847G/FadingMeshes/FadeComponent.FadeComponent=1
@@ -3216,10 +3235,10 @@ None=======
 /Game/Will/661661560381781.661661560381781=1
 /Game/Levels/MainMenu.MainMenu:PersistentLevel.MainMenu=1
 /Game/Will/Pickaxe-SoundBible_com-1937292892.Pickaxe-SoundBible_com-1937292892=0
+/Game/AIAgent/BossAI.BossAI=1
 
 [PluginBrowser]
-InstalledPlugins=DialoguePlugin
-InstalledPlugins=ParticleText
+InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -3227,8 +3246,8 @@ Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
 PrimitiveComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
-SceneComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
-ActorComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
+SceneComponent=
+ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -3237,9 +3256,9 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
 Character="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Character=
+Character="\"Object.ParticleSystems\" \"Object.ParticleSystems\" "
 Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Pawn=
+Pawn="\"Object.ParticleSystems\" \"Object.ParticleSystems\" "
 None=======
 None=======
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3253,10 +3272,10 @@ AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Percept
 TestPawn_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
-Controller="\"Object.Default.DebugColour\" "
+Controller=
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 TopDownCharacter_C="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-TopDownCharacter_C=
+TopDownCharacter_C="\"Object.ParticleSystems\" \"Object.ParticleSystems\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3389,7 +3408,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
-UNR=../../../../../../Users/wstan/Desktop/Github/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 None=======
 None=======
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -4143,7 +4162,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -4246,26 +4265,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Area1-Rework
-MRUItem1=/Game/Models/Aaron/campfire-aaroncrossley-12-01-19
-MRUItem2=/Game/Will/Destrucible_Barrel
-MRUItem3=/Game/Will/Miner
-MRUItem4=/Game/Will/Pickaxe-SoundBible_com-1937292892
-MRUItem5=/Game/Will/661661560381781
+MRUItem0=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem1=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem2=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem3=/Game/AIAgent/BossAI
+MRUItem4=/Game/Levels/Demo
+MRUItem5=/Game/TopDownBP/Blueprints/TopDownCharacter
 MRUItem6=/Game/Levels/MainMenu
-MRUItem7=/Game/NewBlueprint
-MRUItem8=/Game/Dialogs/MyDialogueWidget
-MRUItem9=/Game/b024899h/ParticleEffectsTest
-MRUItem10=/Game/Levels/Demo
-MRUItem11=/Game/c024816h/SmallHealthPotion
-MRUItem12=/Game/GW000979/ItemEnum
-MRUItem13=/Game/Models/finishedassets/barrel/LP_barrel
-MRUItem14=/Game/Models/finishedassets/barrel/LP_barrel_DM
-MRUItem15=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem16=/Game/Josh/AnimationsTest/Heavy_Slam_Montage
-MRUItem17=/Game/Josh/AnimationsTest/Heavy_Slam
-MRUItem18=/Game/Josh/AnimationsTest/Heavy_Uppercut
-MRUItem19=/Game/Josh/HeavyHumanIdleRun_BS
+MRUItem7=/Game/Levels/Area2-MarketMeshStart
+MRUItem8=/Game/Levels/Area1-Rework
+MRUItem9=/Game/Models/Aaron/campfire-aaroncrossley-12-01-19
+MRUItem10=/Game/Will/Destrucible_Barrel
+MRUItem11=/Game/Will/Miner
+MRUItem12=/Game/Will/Pickaxe-SoundBible_com-1937292892
+MRUItem13=/Game/Will/661661560381781
+MRUItem14=/Game/NewBlueprint
+MRUItem15=/Game/Dialogs/MyDialogueWidget
+MRUItem16=/Game/b024899h/ParticleEffectsTest
+MRUItem17=/Game/c024816h/SmallHealthPotion
+MRUItem18=/Game/GW000979/ItemEnum
+MRUItem19=/Game/Models/finishedassets/barrel/LP_barrel
 
 [WidgetTemplatesExpanded]
 Extra=False
